Track compiler results